Support JDK8 runtime (#26)