@@ -21,8 +21,11 @@ import com.alibaba.loongsuite.otel.util.genai.WorkflowInvocation;
 import com.alibaba.loongsuite.otel.util.genai.types.InputMessage;
 import com.alibaba.loongsuite.otel.util.genai.types.OutputMessage;
 import com.alibaba.loongsuite.otel.util.genai.types.TextPart;
+
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+
 import org.springframework.stereotype.Service;
 
 @Service
@@ -42,41 +45,81 @@ public class WorkflowService {
   public WorkflowResponse runWorkflow(String workflowName, String userInput) {
     try (WorkflowInvocation wf = handler.workflow(workflowName)) {
       wf.setInputMessages(
-          List.of(new InputMessage("user", List.of(new TextPart(userInput)))));
+          Collections.singletonList(
+              new InputMessage("user", Collections.singletonList(new TextPart(userInput)))));
 
       List<StepResult> steps = new ArrayList<>();
 
       // Step 1: analyze user intent via LLM
       ChatService.ChatResponse analysis =
           chatService.chat("Analyze this request and identify what tools are needed: " + userInput);
-      steps.add(new StepResult("analyze", analysis.content()));
+      steps.add(new StepResult("analyze", analysis.getContent()));
 
       // Step 2: execute a tool based on the analysis
-      ToolService.ToolResponse toolResult =
-          toolService.executeTool("get_time", "{}");
-      steps.add(new StepResult("tool:" + toolResult.tool(), toolResult.result()));
+      ToolService.ToolResponse toolResult = toolService.executeTool("get_time", "{}");
+      steps.add(new StepResult("tool:" + toolResult.getTool(), toolResult.getResult()));
 
       // Step 3: synthesize final answer via LLM
       String synthesisPrompt =
-          "Based on the analysis: [" + analysis.content()
-              + "] and tool result: [" + toolResult.result()
-              + "], provide a final answer to: " + userInput;
+          "Based on the analysis: ["
+              + analysis.getContent()
+              + "] and tool result: ["
+              + toolResult.getResult()
+              + "], provide a final answer to: "
+              + userInput;
       ChatService.ChatResponse synthesis = chatService.chat(synthesisPrompt);
-      steps.add(new StepResult("synthesize", synthesis.content()));
+      steps.add(new StepResult("synthesize", synthesis.getContent()));
 
       wf.setOutputMessages(
-          List.of(
+          Collections.singletonList(
               new OutputMessage(
                   "assistant",
-                  List.of(new TextPart(synthesis.content())),
+                  Collections.singletonList(new TextPart(synthesis.getContent())),
                   "stop")));
 
-      return new WorkflowResponse(workflowName, synthesis.content(), steps);
+      return new WorkflowResponse(workflowName, synthesis.getContent(), steps);
     }
   }
 
-  public record StepResult(String step, String output) {}
+  public static class StepResult {
+    private final String step;
+    private final String output;
 
-  public record WorkflowResponse(
-      String workflow, String finalAnswer, List<StepResult> steps) {}
+    public StepResult(String step, String output) {
+      this.step = step;
+      this.output = output;
+    }
+
+    public String getStep() {
+      return step;
+    }
+
+    public String getOutput() {
+      return output;
+    }
+  }
+
+  public static class WorkflowResponse {
+    private final String workflow;
+    private final String finalAnswer;
+    private final List<StepResult> steps;
+
+    public WorkflowResponse(String workflow, String finalAnswer, List<StepResult> steps) {
+      this.workflow = workflow;
+      this.finalAnswer = finalAnswer;
+      this.steps = steps;
+    }
+
+    public String getWorkflow() {
+      return workflow;
+    }
+
+    public String getFinalAnswer() {
+      return finalAnswer;
+    }
+
+    public List<StepResult> getSteps() {
+      return steps;
+    }
+  }
 }
